# Collecto

./: .gitmodules  CMakeLists.txt  README.md
include/: controller.hpp  pch.hpp
include/collecto/: ball.hpp  board.hpp  game.hpp  player.hpp
include/data/: matrix.hpp
include/ui/: GamePanel.hpp
libs/: CMakeLists.txt
source/: controller.cpp  entrypoint.cpp
source/collecto/: ball.cpp  board.cpp
source/data/: matrix.cpp
source/ui/: GamePanel.cpp
